# ibtool

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compare.py  genlib.py  ibdump.py  ibgen.py  ibtool.py  ibtool_client.py  ibtool_server.py  nib.hexpat  nib.hexproj  nibencoding.py  pyproject.toml  test.py  test.sh  test_dump.sh  xibparser.py
ibtool/: __main__.py  archive.py  color_convert.py  compare.py  constant_objects.py  constants.py  genlib.py  ibdump.py  ibgen.py  ibtool.py  models.py  nibencoding.py  object_constructors.py  parsers_base.py  storyboard.py  system_images.py  text_measure.py  xibmap.py  xibparser.py
ibtool/parsers/: __init__.py  accessibility.py  action.py  allowedInputSourceLocales.py  allowedTypes.py  animations.py  application.py  attributedString.py  autoresizingMask.py  behavior.py  binding.py  box.py  button.py  buttonCell.py  calendarDate.py  cells.py  clipView.py  color.py  (+95 more)
samples/: blocklist.nib  blocklist.xib  blocklist_big.nib  blocklist_big.xib  minimal.xib  test1.nib  test11_text_view_back.nib  test12_text_view_border.nib  test12_text_view_border.xib  test13_clip_flags.nib  test13_clip_flags.xib  test15_custom_classes.xib  test18_autoresize.nib  test18_autoresize.xib  test19_2_layouts.nib  test19_layouts.nib  test2.nib  test2.xib  test22_stackview_orient.nib  test22_stackview_orient.xib  test26_strings.nib  test3.nib  test3.xib  test4.nib  test5_connect.nib  test6_whitecolor.nib  test6_whitecolor.xib  test7_clipview.nib  test8_menu.nib  test8_menu.xib  test9_menu_conn.nib  test9_menu_conn.xib  window.xib  with_app_class.nib
(+346 files in other folders)
