[project]
name = "ibtool"
version = "1.1.3"
dependencies = [
    "lxml",
]
authors = [
    {name = "David Quesada"},
    {name = "Stanisław Pitucha"},
]
readme = {file = "README.txt", content-type = "text/markdown"}
license = "MIT"

[project.scripts]
ibtool = "ibtool.__main__:run"

[tool.setuptools]
packages = ["ibtool", "ibtool.parsers"]
